fingHelmChart/yamls_kubernetes/mysql8-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql8
  labels:
    app: mysql8
spec:
  type: LoadBalancer
  selector:
    app: mysql8
  ports:
    - port: 3306
      targetPort: 3306
