fingHelmChart/yamls_kubernetes/phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "nginx_cookie_id"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pma
        pathType: Exact
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
      - path: /pma(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
      - path: /(.+)
        pathType: ImplementationSpecific
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
